Fixed alignment of public views (#37)

--- a/services/frontend/app/assets/less/main.less
+++ b/services/frontend/app/assets/less/main.less
@@ -40,3 +40,7 @@ body {
 .text-red {
   color: @red;
 }
+
+.padding-1 {
+  padding: 20px;
+}
